syntax = "proto3";

package spotify.protoman;

option java_package = "com.spotify.protoman";
option go_package = "registry";
option java_multiple_files = true;

message Index {
    repeated ProtoEntry protos = 1;
    repeated PackageVersion package_version = 2;
    repeated Event events = 100;
}

message ProtoEntry {
    string path = 1;
    string blobName = 2;
    string package = 3;
}

message PackageVersion {
    string package = 1;
    Version version = 2;
}

message Version {
    int32 major = 1;
    int32 minor = 2;
    int32 patch = 3;
}

message Event {
    string message = 1;
    int64 ts = 2;
}
